--- a/logging-starterr/pom.xml
+++ b/logging-starterr/pom.xml
@@ -9,29 +9,29 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>eureka-server</artifactId>
-    <packaging>jar</packaging>
-
-    <name>eureka_server</name>
-    <url>http://maven.apache.org</url>
+    <artifactId>logging-starterr</artifactId>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-            <version>4.1.3</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
-
-
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
