--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>timesheet-rest</module>
 		<module>timesheet-page</module>
 		<module>eureka-server</module>
+		<module>logging-starterr</module>
 
 	</modules>
     <properties>
@@ -30,16 +31,9 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-dependencies</artifactId>
-				<version>3.3.2</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
-
 
 	<build>
 		<plugins>
